# training

./: CMakeLists.txt  stakeholders-needs.md
scripts/scripts/: DrawingDataSetter.h  DrawingFunctions.h  WorkWithMatrices.h  main.c
